fix issue with nucubuc flat z-index

--- a/application/stylus/molecules/nucubucFlat.styl
+++ b/application/stylus/molecules/nucubucFlat.styl
@@ -7,11 +7,14 @@ bPathLength= 47
 
 //  NUCUBUC FLAT
 #nucubucFlat
+  z-index: -1
   width: nucubucFlat-width + nucubucFlat-margin
   height: nucubucFlat-height
   div, svg
     display: block
     makeAbsolute()
+.survey #nucubucFlat
+  z-index: auto
 
 //  SYMBOL
 #nucubucFlat .symbol
